[project]
name = "router-checkin"
version = "2.1.5"
description = "Router平台自动签到脚本 - 支持 AnyRouter、AgentRouter 等多平台"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "httpx[http2]>=0.25.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "pyotp>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.9",
    "pre-commit>=3.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["ASYNC", "E", "F", "FAST", "I", "PLE"]
ignore = ["ASYNC109", "ASYNC230", "E101", "E402", "E501", "F841", "E731"]
unfixable = ["E101", "E402", "E501", "F841", "E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
# 基础配置
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

# 错误报告配置
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

# 兼容性配置
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = false

# CI 友好的配置
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = false

# 第三方库存根配置
[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "httpx.*",
    "pyotp.*",
]
ignore_missing_imports = true
